--- a/Baha'i/Baha/KI/p001-094.html
+++ b/Baha'i/Baha/KI/p001-094.html
@@ -41,7 +41,7 @@
 	<td width="77%"><center><h3><a name="p1"/>PART ONE</h3></center><p></td>
 	<td VALIGN=top width="20%">
 	<small>
-	[The Kitáb-i-Íqán] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html">Chapter 10</a><p>
+	[The Kitáb-i-Íqán] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para108">p. 138</a>; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html">Chapter 10</a><p>
 	[The Kitáb-i-Íqán - Part One] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p162">p. 162</a><p>
 	</small>	
 	</td>
@@ -60,12 +60,13 @@
 <tr>
 	<td><a name="para2"></a>
 	<blockquote><small>
-	NO man shall attain the shores of the ocean of true understanding except he be detached from all that is in heaven and on earth. Sanctify your souls, O ye peoples of the world, that haply ye may attain that station which God hath destined for you and enter thus the tabernacle which, according to the dispensations of Providence, hath been raised in the firmament of the Bayán.
+	NO man shall attain the shores of the ocean of true understanding except he be detached from all that is in heaven and on earth. Sanctify your souls, O ye peoples of the world, that haply ye may attain that station which God hath destined for you and enter thus the tabernacle which, according to the dispensations of Providence, hath been raised in the firmament of the <span style="background-color: #ffffCC" TITLE="The Bayán (Exposition) is the chief doctrinal work of the Báb. It is described in God Passes By (pp. 24-25) as a 'monumental repository of the laws and precepts of the new Dispensation and the treasury enshrining most of the Báb's references and tributes to, as well as His warning regarding, 'Him Whom God will make manifest'. . . . this Book, of about eight thousand verses, occupying a pivotal position in Bábí literature, should be regarded primarily as a eulogy of the Promised One rather than a code of laws and ordinances designed to be a permanent guide to future generations.' The Báb also wrote 'the smaller and less weighty Arabic Bayán.'">Bayán</span>.
 	</small></blockquote>
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["No man shall attain..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p162">p. 162</a>,  vol. 3 <a href="../../Others/ROB/V3/p087-107Ch05.html#p95">p. 95</a>
+	["No man shall attain..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p162">p. 162</a>,  vol. 3 <a href="../../Others/ROB/V3/p087-107Ch05.html#p95">p. 95</a><p>
+	[Bayán] <i>God Passes By</i>, p. <a href="../../SE/GPB/p001-086FirstPeriod.html#para41">24</a>-25
 	</small></td>
 	<td>&nbsp;</td>
 </tr>
@@ -1097,14 +1098,15 @@
 </tr>
 <tr>
 	<td><a name="para102"></a>
-	And now, We beseech the people of the Bayán, all the learned, the sages, the divines, and witnesses amongst them, not to forget the wishes and admonitions revealed in their Book. Let them, at all times, fix their gaze upon the essentials of His Cause, lest when He, Who is the <span style="background-color: #ffffCC" TITLE="An imagined fifth 'essence of heaven' in addition to the four elements of earth: hence, the last or highest essence of anything">Quintessence</span> of truth, the inmost Reality of all things, the Source of all light, is made manifest, they cling unto certain passages of the Book, and inflict upon Him that which was inflicted in the Dispensation of the Qur'án. For, verily, powerful is He, the King of divine might, to extinguish with one letter of His wondrous words, the breath of life in the whole of the Bayán and the people thereof, and with one letter bestow upon them a new and everlasting life, and cause them to arise and speed out of the sepulchres of their vain and selfish desires. Take heed, and be watchful; and remember that all things have their consummation in belief in Him, in attainment unto His day, and in the realization of His divine presence. "There is no piety in turning your faces toward the east or toward the west, <a name="p93"/>but he is pious who believeth in God and the Last Day." <sup><small>1</small></sup> Give ear, O people of the Bayán, unto the truth whereunto We have admonished you, that haply ye may seek the shelter of the shadow extended, in the Day of God, upon all mankind.
+	And now, We beseech the people of the <span style="background-color: #ffffCC" TITLE="The Bayán (Exposition) is the chief doctrinal work of the Báb. It is described in God Passes By (pp. 24-25) as a 'monumental repository of the laws and precepts of the new Dispensation and the treasury enshrining most of the Báb's references and tributes to, as well as His warning regarding, 'Him Whom God will make manifest'. . . . this Book, of about eight thousand verses, occupying a pivotal position in Bábí literature, should be regarded primarily as a eulogy of the Promised One rather than a code of laws and ordinances designed to be a permanent guide to future generations.' The Báb also wrote 'the smaller and less weighty Arabic Bayán.'">Bayán</span>, all the learned, the sages, the divines, and witnesses amongst them, not to forget the wishes and admonitions revealed in their Book. Let them, at all times, fix their gaze upon the essentials of His Cause, lest when He, Who is the <span style="background-color: #ffffCC" TITLE="An imagined fifth 'essence of heaven' in addition to the four elements of earth: hence, the last or highest essence of anything">Quintessence</span> of truth, the inmost Reality of all things, the Source of all light, is made manifest, they cling unto certain passages of the Book, and inflict upon Him that which was inflicted in the Dispensation of the Qur'án. For, verily, powerful is He, the King of divine might, to extinguish with one letter of His wondrous words, the breath of life in the whole of the Bayán and the people thereof, and with one letter bestow upon them a new and everlasting life, and cause them to arise and speed out of the sepulchres of their vain and selfish desires. Take heed, and be watchful; and remember that all things have their consummation in belief in Him, in attainment unto His day, and in the realization of His divine presence. "There is no piety in turning your faces toward the east or toward the west, <a name="p93"/>but he is pious who believeth in God and the Last Day." <sup><small>1</small></sup> Give ear, O people of the Bayán, unto the truth whereunto We have admonished you, that haply ye may seek the shelter of the shadow extended, in the Day of God, upon all mankind.
 	<p>
 	<center>END OF PART ONE</center>   
 	</td>
 	<td VALIGN=top><small>
 	1. Qur'án 2:176.<br>
 	<hr>
-	["to extinguish..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p294-314Ch18.html#p308">p. 308</a> 
+	["to extinguish..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p294-314Ch18.html#p308">p. 308</a><p>
+	[Bayán] <i>God Passes By</i>, p. <a href="../../SE/GPB/p001-086FirstPeriod.html#para41">24</a>-25
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">93</DIV></center><p></small></td>
 </tr>
