--- a/Baha'i/Baha/KI/p271-274Index.html
+++ b/Baha'i/Baha/KI/p271-274Index.html
@@ -55,7 +55,7 @@
 	  Baghdád: as "Abode of Peace," <a href= "../KI/p001-094.html#p22">22</a>, <a href= "../KI/p095-258.html#p174">174</a> <p> 
 	  <a name="Bahá'u'lláh">Bahá'u'lláh</a>: desire of, to be wiling sacrifice to the Báb, <a href= "../KI/p095-258.html#p252">252</a>; reason for retirement of, to Kurdistán, <a href= "../KI/p095-258.html#p250">250</a>-51 <p> 
 	  Baní-Háshim, <a href= "../KI/p095-258.html#p241">241</a>, <a href= "../KI/p095-258.html#p242">242</a> <p> 
-	  Bayán: admonition to people of, <a href= "../KI/p001-094.html#p92">92</a>-93, <a href= "../KI/p095-258.html#p248">248</a>, <a href= "../KI/p095-258.html#p249">249</a>-50; tabernacle of God raised in, <a href= "../KI/p001-094.html#p3">3</a>; as Word of God, <a href= "../KI/p095-258.html#p199">199</a> <p> 
+	  <a name="Bayán">Bayán</a>: admonition to people of, <a href= "../KI/p001-094.html#p92">92</a>-93, <a href= "../KI/p095-258.html#p248">248</a>, <a href= "../KI/p095-258.html#p249">249</a>-50; tabernacle of God raised in, <a href= "../KI/p001-094.html#p3">3</a>; as Word of God, <a href= "../KI/p095-258.html#p199">199</a> <p> 
 	  Beginning That Hath No Beginning, <a href= "../KI/p095-258.html#p161">161</a>, <a href= "../KI/p095-258.html#p163">163</a>, <a href= "../KI/p095-258.html#p167">167</a>, <a href= "../KI/p095-258.html#p168">168</a> <p> 
 	  Biháru'l-Anvár: prophecies concerning Qá'im found in, <a href= "../KI/p095-258.html#p243">243</a>, <a href= "../KI/p095-258.html#p254">254</a> <p>
 	  Certitude: city of, <a href= "../KI/p095-258.html#p197">197</a>-99 <p> 
@@ -73,6 +73,7 @@
 	  </td>
 	  <td VALIGN=top width="0%"></td>
 	  <td VALIGN=top width="20%"><small><center><DIV TITLE="Page number location is approximate">271</DIV></center><p>
+	  <i>God Passes By</i>, <a href="../../SE/GPB/p413-436Index.html#Kitab-i-Íqán">Index</a><p>
 	  <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Kitáb-i-Íqán">Index</a>, vol. 2 <a href="../../Others/ROB/V2/p469-476Index.html#Kitáb-i-Íqán">Index</a>, vol. 3 <a href="../../Others/ROB/V3/p467-483Index.html#Kitáb-i-Íqán">Index</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Kitáb-i-Íqán">Index</a>
 	  </td>
 </tr>
