--- a/Baha'i/Baha/PM/p003-340.html
+++ b/Baha'i/Baha/PM/p003-340.html
@@ -2288,7 +2288,7 @@
 </tr>
 <tr>
 	<td><a name="para249"></a>
-	<br><center><h2><a name="LI"/><span style="background-color: #ffffCC" TITLE="Section 51 - Index Entries: Akká, Bahá'u'lláh-call to humanity, Bahá'u'lláh-enemies powerless, Bahá'u'lláh-mission of, Bahá'u'lláh-tribulations powerless, Enemies-impotence of, God-Source of all, God-Source of all, God-Sovereignty of, God-Supreme">LI</span></h2></center>
+	<br><center><h2><a name="LI"/><span style="background-color: #ffffCC" TITLE="Section 51 - Index Entries: Akká, Bahá'u'lláh-call to humanity, Bahá'u'lláh-enemies powerless, Bahá'u'lláh-mission of, Bahá'u'lláh-tribulations powerless, Enemies-impotence of, God-Source of all, God-Sovereignty of, God-Supreme">LI</span></h2></center>
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
