--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -46,7 +46,7 @@
 	</td>
 	<td VALIGN=top width="20%"><small>
 	<hr>
-	<i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#XI">XI</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html">ch. 23</a>
+	<i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#XI">XI</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html">ch. 23</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">1</DIV></center><p></small></td>
 </tr>
@@ -126,7 +126,7 @@
 	<td VALIGN=top><small>
 	1.	Sometimes referred to as <i>Tablet to the Christians</i>.<p>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p001-031Ch01.html#p11">p. 11</a>; vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p227">p. 227</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p001-031Ch01.html#p11">p. 11</a>; vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p227">p. 227</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">7</DIV></center><p></small></td>
 </tr>
@@ -393,7 +393,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html">ch. 10</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html">ch. 10</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">19</DIV></center><p></small></td>
 </tr>
@@ -853,7 +853,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p168-176Ch11.html">ch. 11</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p168-176Ch11.html">ch. 11</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">31</DIV></center><p></small></td>
 </tr>
@@ -1283,7 +1283,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p108-132Ch06.html#p120">p. 120n</a>; vol. 4 <a href="../../Others/ROB/V4/p118-144Ch08.html">ch. 8</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p108-132Ch06.html#p120">p. 120n</a>; vol. 4 <a href="../../Others/ROB/V4/p118-144Ch08.html">ch. 8</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">45</DIV></center><p></small></td>
 </tr>
@@ -1555,7 +1555,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p214-226Ch15.html">ch. 15</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p214-226Ch15.html">ch. 15</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">55</DIV></center><p></small></td>
 </tr>
@@ -2194,7 +2194,7 @@
 	O Haydar-'Alí! Thine other letter which thou hadst forwarded through him who beareth the title of Júd <sup><small>1</small></sup> (Bounty) hath reached Our holy court. Praised be God! It was adorned with the light of divine unity and of detachment and was ablaze with the fire of love and affection. Pray thou unto God that He may grant keenness to the eyes and illumine them with a new light, perchance they may perceive that which hath no parallel nor peer.
 	</td>
 	<td VALIGN=top><small>
-	1. Muhammad Javád-i-Qazvíní, upon whom Bahá'u'lláh bestowed the title Ismu'lláhi'l-Júd (The Name of God, Bounty). He transcribed numerous Tablets of Bahá'u'lláh during His Ministry, but subsequently broke the Covenant. (See <i>God Passes By</i> pages 247 and 319.)
+	1. Muhammad Javád-i-Qazvíní, upon whom Bahá'u'lláh bestowed the title Ismu'lláhi'l-Júd (The Name of God, Bounty). He transcribed numerous Tablets of Bahá'u'lláh during His Ministry, but subsequently broke the Covenant. (See <i>God Passes By</i> pages <a href="../../SE/GPB/p235-320ThirdPeriod.html#p247">247</a> and <a href="../../SE/GPB/p235-320ThirdPeriod.html#p319">319</a>.)
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2326,7 +2326,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Mírzá Hádí Dawlat-Ábádí, one of the divines of Isfáhán, who became a follower of the Báb, later supported Mírzá Yahyá, and was appointed his representative in Írán and his successor. During the persecutions against the Bábís he recanted his faith.<p>
-	2. Mírzá Ashraf, who was martyred in the city of Isfáhán. (See <i>God Passes By</i> p. 201.)
+	2. Mírzá Ashraf, who was martyred in the city of Isfáhán. (See <i>God Passes By</i> <a href="../../SE/GPB/p087-234SecondPeriod.html#para244">p. 201</a>.)
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p168-176Ch11.html#p175">p. 175</a>
 	</small></td>
@@ -2368,7 +2368,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p073-086Ch04.html#p85">p. 85</a>; vol. 4 <a href="../../Others/ROB/V4/p329-350Ch22.html">ch. 22</a>, <a href="../../Others/ROB/V4/p429-431Apndx_II.html">Appendix II</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p073-086Ch04.html#p85">p. 85</a>; vol. 4 <a href="../../Others/ROB/V4/p329-350Ch22.html">ch. 22</a>, <a href="../../Others/ROB/V4/p429-431Apndx_II.html">Appendix II</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">81</DIV></center><p></small></td>
 </tr>
@@ -2396,7 +2396,7 @@
 	<td VALIGN=top><small>
 	1. The two Hands of the Cause of God, Hájí Mullá 'Alí-Akbar Sháhmírzádí and Hájí Abu'l-Hasan Ardakání, Amín-i-Iláhí (Trustee of Huqúqu'lláh), were originally arrested in Tihrán, imprisoned in Qazvín in the year 1891, and then transferred to prison in Tihrán.
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p329-350Ch22.html#p337">p. 337</a>
+	<i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../../Others/ROB/V3/p073-086Ch04.html#p85">p. 85</a>; vol. 4 <a href="../../Others/ROB/V4/p329-350Ch22.html#p337">p. 337</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2725,7 +2725,7 @@
 	Gracious God! A thing hath recently happened which caused great astonishment. It is reported that a certain person <sup><small>1</small></sup> went to the seat of the imperial throne in Persia and succeeded in winning the good graces of some of the nobility by his ingratiating behavior. How pitiful indeed, how deplorable! One wondereth why those who have <a name="p95"/>been the symbols of highest glory should now stoop to boundless shame. What is become of their high resolve? Whither is gone the sense of dignity and honor? The sun of glory and wisdom hath unceasingly been shining above the horizon of Persia, but nowadays it hath sunk to such a low level that certain dignitaries have allowed themselves to be treated as playthings in the hands of the foolish. The aforesaid person hath written such things concerning this people in the Egyptian press and in the Beirut Encyclopedia that the well-informed and the learned were astonished. He proceeded then to Paris where he published a newspaper entitled <i>'Urvatu'l-Vuthqá</i> [The Sure Handle] and sent copies thereof to all parts of the world. He also sent a copy to the Prison of 'Akká, and by so doing he meant to show affection and to make amends for his past actions. In short, this Wronged One hath observed silence in regard to him. We entreat God, the True One, to protect him and to shed upon him the light of justice and fairness. It behooveth him to say:
 	</td>
 	<td VALIGN=top><small>
-	1. Jamálu'd-Dín-i-Afghání. (See <i>God Passes By</i> pp.296, 317.)
+	1. Jamálu'd-Dín-i-Afghání. (See <i>God Passes By</i> pp.<a href="../../SE/GPB/p235-320ThirdPeriod.html#para121">296</a>, 317.)
 	<hr>
 	[Urvatu'l-Vuthqá] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p391-412Ch25.html#p401">p. 401</a>
 	</small></td>
@@ -2803,7 +2803,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html">ch. 9</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html">ch. 9</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">99</DIV></center><p></small></td>
 </tr>
@@ -3660,7 +3660,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p20">p. 20</a>; vol. 4 <a href="../../Others/ROB/V4/p033-049Ch03.html">ch. 3</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p20">p. 20</a>; vol. 4 <a href="../../Others/ROB/V4/p033-049Ch03.html">ch. 3</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">135</DIV></center><p></small></td>
 </tr>
@@ -4129,7 +4129,8 @@
 	</center>
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">153</DIV></center><p></small></td>
 </tr>
@@ -4155,7 +4156,8 @@
 	The source of all good is trust in God, submission unto His command, and contentment with His holy will and pleasure.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p270-282Ch12.html#p282">p. 282</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -4164,7 +4166,8 @@
 	The essence of wisdom is the fear of God, the dread of His scourge and punishment, and the apprehension of His justice and decree.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p065-106Ch04.html#p96">p. 96</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -4374,7 +4377,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p235">p. 235</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p235">p. 235</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">159</DIV></center><p></small></td>
 </tr>
@@ -5194,7 +5197,7 @@
 	O My Name! <sup><small>1</small></sup> Yield thou praise unto God for having graciously chosen thee to be a shower of bounty for that which We have sown in the pure and blessed soil and enabled thee to serve as a springtime of tender mercy for the wondrous and sublime trees We have planted. Indeed so great is this favor that of all created things in the world of existence, none can ever hope to rival it. We have moreover given thee to drink the choice wine of utterance from the chalice of the heavenly bestowals of thy merciful Lord, which is none other than this Tongue of holiness--a Tongue that, as soon as it was unloosed, quickened the entire creation, set in motion all beings and caused the Nightingale to pour forth its melodies. This is the Fountain of living water for all that dwell in the realm of being.
 	</td>
 	<td VALIGN=top><small>
-	1. Siyyid Mihdíy-i-Dahají, to whom this Tablet was addressed, had been given by Bahá'u'lláh the title Ismu'lláhi'l-Mihdí, 'The Name of God, Mihdí'. He later broke the Covenant. (See <i>God Passes By</i>, page 319.)
+	1. Siyyid Mihdíy-i-Dahají, to whom this Tablet was addressed, had been given by Bahá'u'lláh the title Ismu'lláhi'l-Mihdí, 'The Name of God, Mihdí'. He later broke the Covenant. (See <i>God Passes By</i>, page <a href="../../SE/GPB/p235-320ThirdPeriod.html#para171">319</a>.)
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -5348,7 +5351,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p238">p. 238</a>
+	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p237">p. 237</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -5396,13 +5399,13 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html">ch. 6</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para243">p. 200</a>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para324">p. 232</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html">ch. 6</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">203</DIV></center><p></small></td>
 </tr>
 <tr>
 	<td><a name="para572"/>
-	<i>This Tablet was revealed after the martyrdom of the King of Martyrs and the Beloved of Martyrs (see </i>God Passes By<i>, pages 200-201) and was addressed to Shaykh Muhammad Báqir, denounced by Bahá'u'lláh as the 'Wolf'. In this Tablet Bahá'u'lláh refers to Mír Muhammad Husayn, the Imám Jum'ih of Isfáhán, surnamed the 'She-Serpent', who was Shaykh Muhammad Báqir's accomplice in the persecution of the Bahá'ís. (See </i>God Passes By<i>, pages 198, 200-201 and 219). </i>The Epistle to the Son of the Wolf<i> was addressed to Shaykh Muhammad Taqíy-i-Najafi, the son of Shaykh Muhammad Báqir.</i>
+	<i>This Tablet was revealed after the martyrdom of the King of Martyrs and the Beloved of Martyrs (see </i>God Passes By<i>, pages <a href="../../SE/GPB/p087-234SecondPeriod.html#para243">200</a>-201) and was addressed to Shaykh Muhammad Báqir, denounced by Bahá'u'lláh as the 'Wolf'. In this Tablet Bahá'u'lláh refers to Mír Muhammad Husayn, the Imám Jum'ih of Isfáhán, surnamed the 'She-Serpent', who was Shaykh Muhammad Báqir's accomplice in the persecution of the Bahá'ís. (See </i>God Passes By<i>, pages <a href="../../SE/GPB/p087-234SecondPeriod.html#para237">198</a>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para243">200</a>-201 and <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">219</a>). </i>The Epistle to the Son of the Wolf<i> was addressed to Shaykh Muhammad Taqíy-i-Najafi, the son of Shaykh Muhammad Báqir.</i>
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -5463,7 +5466,7 @@
 	</td>
 	<td rowspan="2" VALIGN=top><small>
 	1. Jesus.<p>
-	2. The Sacred Lote-Tree, the Tree beyond which there is no passing (See Qur'án 53:8-18). A symbol of the Manifestation of God. (See <i>God Passes By</i> p. 94.)
+	2. The Sacred Lote-Tree, the Tree beyond which there is no passing (See Qur'án 53:8-18). A symbol of the Manifestation of God. (See <i>God Passes By</i> <a href="../../SE/GPB/p087-234SecondPeriod.html#para15">p. 94</a>.)
 	<hr>
 	["O foolish one!..."] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para136">p. 83</a>;<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html#p95">p. 95</a><p>
 	["Open thine eyes..."] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para136">p. 83</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html#p96">p. 96</a><p>
@@ -6155,7 +6158,7 @@
 	O Thou who bearest My Name, Júd <sup><small>1</small></sup> [Bounty]! Upon thee be My Glory. Give ear unto that which thou didst hear aforetime when the Day-Star of testimony was shining resplendent above the horizon of 'Iráq, when Baghdád served as the Seat of the Throne of thy Lord, the Exalted, the Mighty.
 	</td>
 	<td VALIGN=top><small>
-	1. Muhammad Javád-i-Qazvíní, upon whom Bahá'u'lláh bestowed the title Ismu'lláhi'l-Júd (The Name of God, Bounty). He transcribed numerous Tablets of Bahá'u'lláh during His Ministry, but subsequently broke the Covenant. (See <i>God Passes By</i> pages 247 and 319.)
+	1. Muhammad Javád-i-Qazvíní, upon whom Bahá'u'lláh bestowed the title Ismu'lláhi'l-Júd (The Name of God, Bounty). He transcribed numerous Tablets of Bahá'u'lláh during His Ministry, but subsequently broke the Covenant. (See <i>God Passes By</i> pages <a href="../../SE/GPB/p235-320ThirdPeriod.html#para24">247</a> and <a href="../../SE/GPB/p235-320ThirdPeriod.html#para171">319</a>.)
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
