--- a/Baha'i/Baha/TOB/p271-276Notes.html
+++ b/Baha'i/Baha/TOB/p271-276Notes.html
@@ -102,7 +102,7 @@
 	GPB
 	</td>
 	<td VALIGN=top>
-	<i>God Passes By</i>
+	<a href="../../SE/GPB/Cover.html"><i>God Passes By</i></a>
 	</td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
