--- a/Baha'i/Baha/TOB/Preface.html
+++ b/Baha'i/Baha/TOB/Preface.html
@@ -51,7 +51,7 @@
 	'The formulation by Bahá’u’lláh, in His <i>Kitáb-i-Aqdas</i>, of the fundamental laws of His Dispensation was followed, as His Mission drew to a close, by the enunciation of certain precepts and principles which lie at the very core of His Faith, by the reaffirmation of truths He had previously proclaimed, by the elaboration and elucidation of some of the laws He had already laid down, by the revelation of further prophecies and warnings, and by the establishment of subsidiary ordinances designed to supplement the provisions of His Most Holy Book. These were recorded in unnumbered Tablets, which He continued to reveal until the last days of His earthly life, ... These Tablets—mighty and final effusions of His indefatigable pen—must rank among the choicest fruits which His mind has yielded, and mark the consummation of His forty-year-long ministry.' <sup><small>1</small></sup>
 	</td>
 	<td VALIGN=top><small>
-	1 Shoghi Effendi, <i>God Passes By</i> (Bahá'í Publishing Trust, Wilmette, Ill. 1944, page 216).
+	1 Shoghi Effendi, <i>God Passes By</i> (Bahá'í Publishing Trust, Wilmette, Ill. 1944, page <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">216</a>).
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
